--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="a page to display and create monuments">
   <link rel="shortcut icon" href="favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +13,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
   <script type="module" src="js/index.js"></script>
-  <title>Document</title>
+  <title>Monuments</title>
 </head>
 
 <body>
