Migrate to vite styles imports included on index.ts

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Nanum+Gothic&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="styles/styles.css">
-  <script type="module" src="js/index.js"></script>
+
+  <script type="module" src="./src/index.ts"></script>
   <title>Monuments</title>
 </head>
 
